syntax = "proto3";

package fdbg.server;

message Ack {}

message WriteMemory {
  uint64 initial_addr = 1;
  bytes  bytes        = 2;
}

message ReadMemory {
  uint64 initial_addr = 1;
  uint32 sz           = 2;
}

message ToComputer {
  oneof message {
    Ack         ack          = 1;
    WriteMemory write_memory = 2;
    ReadMemory  read_memory  = 3;
  }
}